2013-02-07  Michael Albinus  <michael.albinus@gmx.de>

	* vc/vc-hooks.el (vc-find-file-hook): `buffer-file-truename' can
	be nil.  Handle this.  (Bug#13636)

2013-02-07  Richard Stallman  <rms@gnu.org>

	* mail/rmail.el (rmail-variables): Specify `no-conversion' for
	`save-buffer-coding-system'.

2013-02-07  Alan Mackenzie  <acm@muc.de>

	Fix bug in state cache mechanism.  Remove 'BOD "strategy".  Refactor.
	* progmodes/cc-engine.el (c-get-fallback-scan-pos): Remove.
	(c-parse-state-get-strategy): Don't return 'BOD any more.
	(c-append-lower-brace-pair-to-state-cache):
	Extra parameter HERE instead of narrowing.
	Widen to top of buffer before searching backwards for a brace pair.
	(c-state-push-any-brace-pair): Add HERE parameter to function call.
	(c-append-to-state-cache): Extra parameter HERE in place of narrowing.
	Narrow to parameter HERE, in place of being called narrowed.
	(c-remove-stale-state-cache): Extra parameter HERE in place of
	narrowing.  Check there's an open brace in the cache before
	searching for its match.
	(c-invalidate-state-cache-1): Add HERE parameter to function call.
	(c-parse-state-1): Don't narrow here for 'forward strategy,
	instead passing extra parameter HERE to several functions.
	Remove 'BOD strategy.

2013-02-06  Nicolas Richard <theonewiththeevillook@yahoo.fr>  (tiny change)

	* emacs-lisp/package.el (describe-package-1): Tell what archive is
	used to install the package.

2013-02-06  Glenn Morris  <rgm@gnu.org>

	* vc/vc-hooks.el (vc-find-file-hook): Don't ask about following links
	if we can't get user input.  (Bug#6567)

	* startup.el (command-line): If simple.el is missing,
	test and warn about for some possible causes.

2013-02-05  Jan Djärv  <jan.h.d@swipnet.se>

	* cus-start.el (all): Add ns-use-native-fullscreen.

2013-02-05  Glenn Morris  <rgm@gnu.org>

	* profiler.el (profiler-report-mode-map): Add a restart menu entry.

	* play/gamegrid.el (gamegrid-add-score-with-update-game-score):