@@ -1,3 +1,8 @@
+2013-02-08  Jambunathan K  <kjambunathan@gmail.com>
+
+	* icomplete.el (icomplete-forward-completions)
+	(icomplete-backward-completions): Handle corner case (bug#13602).
+
 2013-02-07  Michael Albinus  <michael.albinus@gmx.de>
 
 	* vc/vc-hooks.el (vc-find-file-hook): `buffer-file-truename' can
